@@ -1,6 +1,6 @@
 clean:
-	$(MAKE) -C z80 -f clean.mk clean
+	$(MAKE) -C z80 -f clean.mk clean BUILDDIR=$(BUILDDIR)
 
 distclean:
-	$(MAKE) -C z80 -f clean.mk distclean
+	$(MAKE) -C z80 -f clean.mk distclean BUILDDIR=$(BUILDDIR)
 
